--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
-
+  
 <html>
 <head>
-    <title>JieC INF1339 Project 2</title>
-    <style>
-        .test_class {
-            color: teal;
-        }
-    </style>
-    <script>
-        function hello() {
-            document.getElementById("sentinel").innerHTML = 'HELLO'
-        }
-    </script>
+    <title>API Project</title>
+</head>
 
-    <head>
+<body>
+    <h1>API Project Iteration</h1>
 
-    <body>
-        <h3>API Project Iteration 0</h3>
-        <p id="sentinel" class="test_class"></p>
-        <button type="button" onclick="hello()">Click Me!</button>
-    </body>
+    <h3><a href='iteration00.html'>Version 0</a></h3>
+    <iframe src='iteration00.html' height="200px" width="800px"></iframe>
+    <h3><a href='iteration01.html'>Version 1</a></h3>
+    <iframe src='iteration01.html' height="200px" width="800px"></iframe>
+    <h3><a href='iteration02.html'>Version 2</a></h3>
+    <iframe src='iteration02.html' height="200px" width="800px"></iframe>
+    <h3><a href='iteration03.html'>Version 3</a></h3>
+    <iframe src='iteration03.html' height="200px" width="800px"></iframe>
+    <h3><a href='iteration04.html'>Version 4</a></h3>
+    <iframe src='iteration04.html' height="200px" width="800px"></iframe>
+</body>
+
 </html>
